Fix Dialog/Announcement spacing, fix Button text alignment and smoothing

--- a/apps/smithy/.storybook/global.css
+++ b/apps/smithy/.storybook/global.css
@@ -1,3 +1,3 @@
 :root {
-  font-family: "TT Interphases Pro";
+  font-family: "Inter";
 }
